--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wk1-code-challenge</title>
+    <script src="challenge1.js" defer></script>
+    <script src="challenge2.js" defer></script>
+    <script src="challenge3.js" defer></script>
 </head>
 <body>
-    <script src="challenge1.js"></script>
-    <script src="challenge2.js"></script>
-    <script src="challenge3.js"></script>
+    
 </body>
 </html>
